--- a/layouts/_default/term.html
+++ b/layouts/_default/term.html
@@ -1,15 +1,5 @@
-<!DOCTYPE html>
-<html>
-{{ partial "header.html" . }}
-
-<body>
-	<div class="container wrapper tags">
-		{{ partial "head.html" . }}
-
-		<h1 class="page-title">All tags</h1>
-	</div>
-
-	{{ partial "footer.html" . }}
-</body>
-
-</html>
+{{ define "main" }}
+<div class="tags">
+	<h2 class="page-title">All tags</h2>
+</div>
+{{ end }}
