--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,15 +1,15 @@
 <div class="header">
 	<base href="{{ .Site.BaseURL }}">
-	<h1 class="site-title"><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></h1>
 	<div class="site-description">
-		{{- if isset .Site.Params "subtitle" -}}
-		<h2>{{ .Site.Params.Subtitle | markdownify }}</h2>
-		{{- end -}}
+		<h1 class="site-title"><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></h1>
 		<nav class="nav social">
 			<ul class="flat">
 				{{- range $index, $key := .Site.Params.Social -}}
 				<a href="{{ $key.url }}" title="{{ $key.name }}"><i data-feather="{{ $key.icon }}"></i></a>
 				{{- end -}}
+				{{ with .Site.Params.cv_name }}
+					| <a href="{{ . }}">[cv]</a>
+				{{ end }}
 			</ul>
 		</nav>
 	</div>
