--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,6 @@
 body {
     font-family: "ubuntu", sans-serif;
-    font-weight: 400;
+    font-weight: 300;
     color: #333;
     line-height: 1.6;
     font-size: 16px;
@@ -194,7 +194,7 @@ ul {
 pre code {
   display: inline-block;
 }
-  
+
 
 .wrapper {
     max-width: 760px;
@@ -208,6 +208,15 @@ pre code {
 .header {
     margin-bottom: 20px;
     padding-bottom: 20px;
+}
+
+.header .profile-image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 30%;
+  height: auto;
+  border-radius: 50%;
 }
 
 .header h1,
@@ -248,6 +257,7 @@ pre code {
 .header .site-description {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .header .site-description nav {
