--- a/layouts/index.html
+++ b/layouts/index.html
@@ -28,9 +28,14 @@
 
 	<nav class="nav">
 		<ul class="flat">
+			{{ $currentPage := . }}
 			{{ range .Site.Menus.main }}
 			<li>
-				<a href="{{ .URL }}">{{ .Name }}</a>
+				{{if or ($currentPage.IsMenuCurrent "main" .) ($currentPage.HasMenuCurrent "main" .) }}
+					<a href="{{ .URL }}" class="active">{{ .Name }}</a>
+				{{ else }}
+					<a href="{{ .URL }}">{{ .Name }}</a>
+				{{ end }}
 			</li>
 			{{ end }}
 		</ul>
