--- a/static/css/main.css
+++ b/static/css/main.css
@@ -180,15 +180,19 @@ ul {
 }
 
 .highlight pre {
+    line-height: 1.4;
+    font-size: .9em;
     margin-bottom: 0;
     margin-top: 0;
-    padding: 20px;
+    padding: 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     background-color: transparent !important;
 }
 
 .highlight {
     background: 0 0;
-    background-color: #FAFAFA;
+    background-color: #333;
 }
 
 pre code {
