--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,9 +4,13 @@
 	</nav>
 </div>
 
-{{ if not .Site.IsServer }}
-{{ template "_internal/google_analytics_async.html" . }}
-{{ end }}
 {{- with .Site.Params.Social -}}
-<script>feather.replace()</script>
+	<script>feather.replace()</script>
 {{- end -}}
+
+{{ if not .Site.IsServer }}
+	{{ template "_internal/google_analytics_async.html" . }}
+	{{- with .Site.Params.goatcounter -}}
+		<script data-goatcounter="https://{{ .  }}.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+	{{- end -}}
+{{ end }}
